Fix libcurl linking in Linux

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,11 +8,12 @@ set(CMAKE_BUILD_TYPE "MinSizeRel")
 add_executable(${PROJECT_NAME})
 target_sources(${PROJECT_NAME} PRIVATE main.c naett/naett.c)
 
-if(WIN32)
+if(CMAKE_SYSTEM_NAME STREQUAL "Windows")
     target_link_libraries(${PROJECT_NAME} PRIVATE winhttp)
-elseif(LINUX)
-    target_link_libraries(${PROJECT_NAME} PRIVATE curl pthread)
-elseif(APPLE)
+elseif(CMAKE_SYSTEM_NAME STREQUAL "Linux")
+    find_package(CURL REQUIRED)
+    target_link_libraries(${PROJECT_NAME} PRIVATE CURL::libcurl pthread)
+elseif(CMAKE_SYSTEM_NAME STREQUAL "Darwin")
     set(CMAKE_EXE_LINKER_FLAGS "-framework Foundation")
     set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wno-gnu-zero-variadic-macro-arguments")
 endif()
