Reduce Windows & Linux binaries size

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,9 +10,11 @@ target_sources(${PROJECT_NAME} PRIVATE main.c naett/naett.c)
 
 if(CMAKE_SYSTEM_NAME STREQUAL "Windows")
     target_link_libraries(${PROJECT_NAME} PRIVATE winhttp)
+    set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -s")
 elseif(CMAKE_SYSTEM_NAME STREQUAL "Linux")
     find_package(CURL REQUIRED)
     target_link_libraries(${PROJECT_NAME} PRIVATE CURL::libcurl pthread)
+    set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -s")
 elseif(CMAKE_SYSTEM_NAME STREQUAL "Darwin")
     set(CMAKE_EXE_LINKER_FLAGS "-framework Foundation")
     set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wno-gnu-zero-variadic-macro-arguments")
